--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <style>
+        h1{background-color: blue;color: red;}
+    </style>
     <h1>hhhhh</h1>
     <h2>jjhhh</h2>
     <h3>gghghgh</h3>
